# go-backend/internal/api/routers/CardsRouter.go
@@ -8,4 +8,6 @@ import (
 func (router *Router) CardsRoutes(group *gin.RouterGroup) {
 	group.GET("/get_user_cards", controller.GetUserCard)
 	group.GET("/get_clinic_cards", controller.GetClinicCard)
+	group.GET("/get_all_user_cards", controller.GetAllUserCard)
+	group.GET("/get_all_clinic_cards", controller.GetAllClinicCard)
 }
